# Competitive_Programming

./: .clang-format  CMakeLists.txt  DLIntersectionImproved.cpp  DLineIntersection.cpp  MPFR_T_STACK.cpp  MPFStack.cpp  README.md  SuperiorCharacters.cpp  Testing.cpp  WeightOfNumbers.cpp  a.out  main.cpp
A2OJ/Ladder/: 30.cpp  Eight.cpp  Eighteen.cpp  Eleven.cpp  Fifteen.cpp  Five.cpp  Four.cpp  Fourteen.cpp  Hundred.cpp  Nine.cpp  Nineteen.cpp  One.cpp  Sample.cpp  Seven.cpp  Seventeen.cpp  Six.cpp  Sixteen.cpp  Ten.cpp  Test  Test.cpp  TestingMPF  TestingMPF.cpp  Thirteen.cpp  Three.cpp  Twelve.cpp  Twenty.cpp  TwentyFive.cpp  TwentyOne.cpp  TwentySeven.cpp  TwentySix.cpp  TwentyTwo.cpp  Two.cpp  a.out  file  file1  gmpxx-tst
Contests/CodeForces/: A. Boredom.cpp  A. Party.cpp  A. Reposts.cpp  B. Christmas Spruce.cpp  Bipartite.cpp  C. Kefa and Park.cpp  HugeDeque.cpp  JustDupsInArray.cpp  Numbers.txt  PairWiseDups.cpp  PerfectNum.cpp  Queen.cpp  Test.cpp  TestMpfr.cpp  a.out  testingdeque.cpp
Contests/Codechef/MAY18/: BestFit.cpp  BestFitExp.cpp  BoostAny.cpp  Calendar.cpp  Date.cpp  Deque.cpp  Employee.cpp  FillSeriesVariant.cpp  Four.cpp  FourFinal.cpp  Functors.cpp  MpfrException.cpp  MpfrPrec.cpp  MpfrReference.cpp  Mpfr_double.cpp  Mpfrclass.cpp  One.cpp  OneMillion.cpp  Parents.cpp  RapidJson.cpp  SegmentTree.cpp  StructSample.cpp  Templates.cpp  Test.java  TestingFunctor.cpp  ThreadLocal.cpp  ThreeFinalSolution.cpp  ThreeNumbers.cpp  Two.cpp  ValidPalindrome2.cpp  Variant.cpp  VariantTypes.cpp  VisitorTesting.cpp  a.out  boost  (+9 more)
test/: CMakeLists.txt  GTest.cpp
(+17 files in other folders)
